--- a/develop/jade/account-page-1.pug
+++ b/develop/jade/account-page-1.pug
@@ -11,6 +11,7 @@ html(lang='ru')
         +account-layout
             +account-wizard
         //- +account-settings-modal
+        +account-feedback-modal
         +main-footer
             +lines
         +doc-footer
