--- a/develop/blocks/base-input/base-input.scss
+++ b/develop/blocks/base-input/base-input.scss
@@ -36,7 +36,8 @@
         }
     }
 
-    &__input {
+    &__input,
+    &__textarea {
         width: 100%;
         padding: 7px 0;
         border: none;
@@ -74,6 +75,11 @@
         &[type='number'] {
             -moz-appearance: textfield;
         }
+    }
+
+    &__textarea {
+        height: 70px;
+        resize: none;
     }
 
     &__label {
