--- a/develop/jade/account-page-1.pug
+++ b/develop/jade/account-page-1.pug
@@ -10,7 +10,7 @@ html(lang='ru')
         +main-header
         +account-layout
             +account-wizard
-        //- +account-settings-modal
+        +account-settings-modal
         +account-feedback-modal
         +main-footer
             +lines
