--- a/develop/blocks/partner-table/partner-table.scss
+++ b/develop/blocks/partner-table/partner-table.scss
@@ -65,13 +65,16 @@
         width: 24px;
         height: 24px;
 
+        color: #696969;
+        transition: color 300ms ease;
+
         &::after {
             content: '';
             position: absolute;
             top: 50%;
             left: 50%;
 
-            border: solid #000;
+            border: solid currentColor;
             border-width: 0 1px 1px 0;
             padding: 5px;
             transform: translate(-50%, -50%) rotate(135deg);
@@ -83,6 +86,12 @@
 
         &.next::after {
             transform: translate(-50%, -50%) rotate(-45deg);
+        }
+
+        &:hover,
+        &:active,
+        &:focus {
+            color: $theme-color;
         }
     }
 }
