--- a/develop/blocks/account-documents/account-documents.scss
+++ b/develop/blocks/account-documents/account-documents.scss
@@ -2,6 +2,28 @@
     width: calc(100% + 40px);
     margin-left: -20px;
 
+    &__empty {
+        max-width: 360px;
+        margin: 0 auto;
+        padding: 24px;
+
+        text-align: center;
+
+        border: 1px solid $theme-color;
+        border-radius: 8px;
+    }
+
+    &__empty-title {
+        margin-bottom: 20px;
+
+        font-size: 18px;
+        font-weight: 600;
+    }
+
+    &__empty-link.btn {
+        font-size: 16px;
+    }
+
     &__date {
         display: block;
         padding-left: 16px;
@@ -25,6 +47,10 @@
     .account-documents {
         width: 100%;
         margin: 0;
+
+        &__empty {
+            padding: 56px 24px;
+        }
     }
 }
 
