--- a/develop/blocks/account-documents/account-documents.pug
+++ b/develop/blocks/account-documents/account-documents.pug
@@ -1,5 +1,8 @@
 mixin account-documents()
     +b.SECTION.account-documents
+        +e.empty
+            +e.empty-title У вас пока нет документов
+            +e.A.empty-link.btn(href='#') Купить объект
         +e.block
             +e.TIME.date(datetime='2020-01-17') 17 января 2020 г.
             +e.document
